<resources>
    <string name="app_name">Quicksum</string>
    <string name="total">Total</string>
    <string name="displayValue">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="fraction">fraction</string>
    <string name="backToNormal">Back To Normal</string>
    <string name="settings">Settings</string>
    <string name="text_color">Text Color</string>
</resources>
