<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/HeaderBar"
        android:elevation="4dp"
        app:title="@string/app_name"
        app:titleTextColor="@color/materialcolorpicker__white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:labelFor="@+id/mDisplayValue"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:text="@string/total"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/mDisplayValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:inputType="none"
        android:onClick="reset"
        android:text="@string/displayValue"
        android:textAlignment="center"
        android:textSize="100sp" />


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:columnCount="3"
        android:rowCount="3">

        <Button
            android:id="@+id/buttonOne"
            android:layout_columnWeight="1"
            android:padding="20dp"
            android:text="@string/num_1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonTwo"
            android:layout_columnWeight="1"
            android:padding="20dp"
            android:text="@string/num_2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonThree"
            android:layout_columnWeight="1"
            android:padding="20dp"
            android:text="@string/num_3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonFour"
            android:layout_columnWeight="1"
            android:padding="20dp"
            android:text="@string/num_4"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonFive"
            android:layout_columnWeight="1"
            android:padding="20dp"
            android:text="@string/num_5"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonSix"
            android:layout_columnWeight="1"
            android:padding="20dp"
            android:text="@string/num_6"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonSeven"
            android:layout_columnWeight="1"
            android:padding="20dp"
            android:text="@string/num_7"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonEight"
            android:layout_columnWeight="1"
            android:padding="20dp"
            android:text="@string/num_8"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonNine"
            android:layout_columnWeight="1"
            android:padding="20dp"
            android:text="@string/num_9"
            android:textSize="20sp" />
    </GridLayout>

    <Button
        android:id="@+id/otherButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_weight="0.2"
        android:onClick="setOtherButton"
        android:background="#3815c8"
        android:text="@string/fraction"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

</LinearLayout>